--- a/CommuterApp/package.json
+++ b/CommuterApp/package.json
@@ -4,21 +4,18 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^50.0.14",
+    "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "semver": "^7.6.0"
+    "react-native": "0.73.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/cli": "^0.0.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
