--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.5.1",
-    "expo": "^50.0.14",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^50.0.17",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "^2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-updates": "~0.24.12",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
     "semver": "^7.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/cli": "^0.0.0"
+    "@expo/cli": "^0.17.10"
   },
   "private": true
 }
