--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "expo-updates": "~0.24.12",
+    "js-sha256": "^0.11.0",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
