--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "commuterapp",
+  "name": "commuter-app",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,7 +10,7 @@
     "build": "eas build -p all"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.18.1",
+    "@expo/metro-config": "~0.17.1",
     "@firebase/app": "^0.10.1",
     "@firebase/firestore": "^4.5.1",
     "@react-navigation/native": "^6.1.17",
@@ -23,8 +24,11 @@
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
-    "semver": "^7.6.0"
+    "react-native-gesture-handler": "~2.14.0",
+    "semver": "^7.6.0",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.6",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
