--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "semver": "^7.6.0",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.19.6",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-native-gesture-handler": "^2.16.0",
+    "semver": "^7.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
